# morphic

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  codeql.yml  documentation.yml  release.yml
assets/test/: sample1.avif  sample3.tif
cmd/morphic/: main.go
docs/: _config.yml  changelog.rst  cli.rst  conf.py  configuration.rst  development.rst  getting_started.rst  index.md  index.rst
docs/api/: converter.rst  dupfinder.rst  frontend.rst  shared.rst
go/: go.mod  go.sum
go/internal/converter/: constants.go  converter.go
go/internal/dupfinder/: images.go
go/internal/inspector/: integrity.go  scanner.go
go/internal/organizer/: renamer.go  scanner.go
go/internal/resizer/: scanner.go
go/internal/shared/: file_browser.go  jobs.go  thumbnails.go  utils.go
go/web/: routes_converter.go  routes_organizer.go  routes_resizer.go  routes_shared.go  server.go
go/web/templates/: index.html
internal/converter/: constants.go  converter.go  converter_test.go  scanner.go
internal/dupfinder/: dupfinder_test.go  images.go  scanner.go  videos.go
internal/inspector/: exif.go  integrity.go
internal/organizer/: date_sorter.go  organizer_test.go  scanner.go
internal/resizer/: operations.go  scanner.go
internal/shared/: constants.go  file_browser.go  jobs.go  shared_test.go  thumbnails.go
src/morphic/: __init__.py
src/morphic/converter/: __init__.py  constants.py  converter.py  scanner.py
src/morphic/dupfinder/: __init__.py  accelerator.py  images.py  scanner.py  videos.py
src/morphic/frontend/: __init__.py  __main__.py  app.py  routes_converter.py  routes_dupfinder.py  routes_inspector.py  routes_organizer.py  routes_resizer.py  routes_shared.py
src/morphic/frontend/static/: app.js  style.css
src/morphic/frontend/templates/: index.html
src/morphic/inspector/: __init__.py  exif.py  integrity.py  scanner.py
src/morphic/organizer/: __init__.py  date_sorter.py  renamer.py  scanner.py
src/morphic/resizer/: __init__.py  operations.py  scanner.py
src/morphic/shared/: __init__.py  constants.py  file_browser.py  thumbnails.py  utils.py
tests/: conftest.py
tests/converter/: test_constants.py  test_converter.py  test_scanner.py
tests/dupfinder/: test_accelerator.py  test_images.py  test_scanner.py  test_videos.py
tests/frontend/: test_app.py
tests/inspector/: test_exif.py  test_integrity.py  test_scanner.py
tests/organizer/: test_date_sorter.py  test_renamer.py
tests/resizer/: test_operations.py  test_scanner.py
tests/shared/: test_constants.py  test_file_browser.py  test_thumbnails.py  test_utils.py
web/: routes_converter.go  routes_dupfinder.go  routes_inspector.go  routes_organizer.go  routes_shared.go  server.go
web/static/: app.js  style.css
web/templates/: index.html
